# memz

./: .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml
docs/spec/: continuous-peft-service.md
experiments/: README.md
experiments/age-of-consent/: README.md  batch_01.jsonl  batch_02.jsonl  batch_03.jsonl  config.yaml  eval.jsonl
experiments/bizarre-love-triangle/: README.md  batch_01_botany_aviation.jsonl  batch_02_culinary_astronomy.jsonl  batch_03_reinforcement.jsonl  config.yaml  eval.jsonl
experiments/blue-monday/: README.md  config.yaml  eval.jsonl  phase_01_initial.jsonl  phase_02_corrections.jsonl
experiments/ceremony/: README.md  config.yaml  eval.jsonl  examples.jsonl
experiments/the-perfect-kiss/: README.md  config.yaml  eval.jsonl  phase_01_foundation.jsonl  phase_02_expansion.jsonl  phase_03_corrections.jsonl  phase_04_domain_shift.jsonl  phase_05_reinforcement.jsonl
src/memz/: __init__.py  __main__.py  checkpoint.py  cli.py  config.py  data.py  device.py  evaluator.py  server.py  trainer.py
tests/: conftest.py  test_checkpoint.py  test_config.py  test_data.py  test_device.py  test_evaluator.py  test_server.py  test_trainer.py
